tests/errors/alias-3.ja

procedure foo(int x, int y, int z)
    local int k = 1
    call bar(k, x, x)
    delocal int k = 1

procedure bar(int a, int b, int c)
    if b = 1 then
        skip
    else
        call bar(c, a, b)
    fi b = 0

procedure main()
    int x
    int y
    call foo(x, x, y)
